support defaultValues for returned livedata objects

--- a/firestore-livedata/src/main/AndroidManifest.xml
+++ b/firestore-livedata/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ch.jn.firestorelivedata" />
+<manifest package="ch.jn.firestorelivedata" />
